# windows_utils

./: Cargo.toml
src/play_pause/: main.rs
src/power_mode_monitor/: main.rs
src/screen_off/: main.rs
